--- a/pages/java-library.html
+++ b/pages/java-library.html
@@ -1,167 +1,210 @@
-<!-- <?php
-$a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
-?> -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Library</title>
-    <meta content="Library Java Application" name="description" />
-    <meta content="Library Java aplikasi application" name="keywords" />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <!-- Favicons -->
-    <link href="../assets/img/favicon.png" rel="icon" />
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <title>Maulana Kavaldo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
+  <!-- Favicons -->
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../assets/vendor/boxicons/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../assets/vendor/swiper/swiper-bundle.min.css"
-      rel="stylesheet"
-    />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
-    <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: MyResume - v4.9.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-  </head>
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/style.css" rel="stylesheet">
+</head>
 
-  <body>
-    <main id="main">
-      <!-- ======= Portfolio Details Section ======= -->
-      <section id="portfolio-details" class="portfolio-details">
-        <div class="container">
-          <div class="col-lg-12">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                <!-- <?php
-              for ($x = 1; $x <= $a; $x++) {
-                echo '<div class="swiper-slide">';
-                echo '<img src="../assets/img/portfolio/churn-prediction/Slide' . $x . '.png" alt="" />';
-                echo '</div>';
-              }
-              ?> -->
+<body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-1.png"
-                    alt=""
-                  />
-                </div>
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-2.png"
-                    alt=""
-                  />
-                </div>
+  </header><!-- End Header -->
+  <main id="main">
+    <!-- ======= Portfolio Details Section ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container portfolio-info"> <!-- portfolio-info Disini-->
+        <div class="row align-items-stretch">
+          <!-- Bagian slider -->
+          <div class="col-md-6">
+            <div class=""> <!-- portfolio-info Disini-->
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-3.png"
-                    alt=""
-                  />
-                </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-1.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
 
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-4.png"
-                    alt=""
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-5.png"
-                    alt=""
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    src="../assets/img/portfolio/java-library/slide-6.png"
-                    alt=""
-                  />
-                </div>
-                <!-- <div class="swiper-slide">
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-2.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-3.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-4.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-5.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-library/slide-6.png" alt="" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox" role="button" />
+                  </div>
+                  <!-- <div class="swiper-slide">
                   <img
                     src="../assets/img/portfolio/java-library/slide-7.png"
                     alt=""
                   />
                 </div> -->
+                </div>
+                <div class="swiper-pagination"></div>
               </div>
-              <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-12">
-            <div class="portfolio-info">
+          <!-- Bagian informasi proyek -->
+          <div class="col-md-6">
+            <div class="">
               <h3>Project Information</h3>
-              <ul>
-                <li><strong>Category</strong> : Java Application, Library</li>
-                <li><strong>Project date</strong> :</li>
-                <li>
-                  <strong>Project URL</strong> :
-                  <a href="https://github.com/maulanakavaldo/">Github</a>
+              <ul class="list-group">
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Project name</strong></div>
+                  <div class="col-9">: Library</div>
                 </li>
+                <!-- Category -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Category</strong></div>
+                  <div class="col-9">: Java Application</div>
+                </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class="col-9">: Java Library</div>
+                </li>
+                <!-- Project date -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project date</strong>
+                  </div>
+                  <div class="col-9">
+                    : 2020
+                  </div><!-- Project tools -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Tools</strong>
+                  </div>
+                  <div class="col-9">
+                    : NetBeans
+                  </div>
+                </li><!-- Project URL -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project URL</strong>
+                  </div>
+                  <div class="col-9">
+                    <a href="#" target="_blank">: GitHub</a>
+                  </div>
+                </li>
+                <!-- Uncomment and use as needed for other section -->
+                <!-- <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Demo</strong></div>
+                                    <div class="col-9">
+                                        <a href="#" target="_blank">: </a>
+                                    </div>
+                                </li> -->
               </ul>
-              <br />
-              <h3>Details</h3>
-              <p>
-                Projek ini dibuat untuk memenuhi tugas mata kuliah pemrograman
-                java.
-              </p>
             </div>
           </div>
         </div>
-      </section>
-      <!-- End Portfolio Details Section -->
-    </main>
-    <!-- End #main -->
 
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
- 
-    <!-- Vendor JS Files -->
-    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/vendor/typed.js/typed.min.js"></script>
-    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
+        <div class="col-lg-12 col-lg-6">
+          <div class="mt-5">
+            <h3>Details</h3>
+            <p>
+              This Java application is a library management system designed to facilitate the management of book data,
+              member data, staff data, as well as book borrowing and returning processes.
+            </p>
 
-    <!-- Template Main JS File -->
-    <script src="../assets/js/main.js"></script>
-  </body>
+            <h3 class="mt-5">Features:</h3>
+            <ul class="list-group">
+              <li class="list-group-item"><strong>Book Data:</strong> The application allows users to easily store,
+                manage, and update book data. Users can input information such as title, author, publisher, publication
+                year, and ISBN number.</li>
+              <li class="list-group-item"><strong>Member Data:</strong> Users can manage library member data
+                efficiently. The data that can be stored includes names, addresses, phone numbers, and other member
+                identifications. The application also allows the creation of new member accounts.</li>
+              <li class="list-group-item"><strong>Staff Data:</strong> The application provides features to manage
+                library staff data. This includes names, positions, contacts, and other necessary information to
+                organize staff roles in managing the library.</li>
+              <li class="list-group-item"><strong>Book Borrowing:</strong> The application streamlines the book
+                borrowing process by providing a simple interface for staff to record the books borrowed by members.
+                This includes the borrowing date, return deadline, and other related information.</li>
+              <li class="list-group-item"><strong>Book Returning:</strong> The application also facilitates the book
+                returning process by members. Staff can easily record the books returned and calculate fines (if any)
+                for late returns.</li>
+            </ul>
+
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Portfolio Details Section -->
+  </main>
+  <!-- End #main -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/typed.js/typed.min.js"></script>
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <!-- Template Main JS File -->
+  <script src="../assets/js/main.js"></script>
+</body>
+
 </html>
