--- a/pages/java-movie-ticketing.html
+++ b/pages/java-movie-ticketing.html
@@ -1,6 +1,199 @@
-<!-- <?php
-$a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
-?> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Maulana Kavaldo</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
+
+  <!-- Favicons -->
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
+  <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex flex-column justify-content-center">
+
+    <nav id="navbar" class="navbar nav-menu">
+      <ul>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
+      </ul>
+    </nav><!-- .nav-menu -->
+
+  </header><!-- End Header -->
+  <main id="main">
+    <!-- ======= Portfolio Details Section ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+      <div class="container portfolio-info"> <!-- portfolio-info Disini-->
+        <div class="row align-items-stretch">
+          <!-- Bagian slider -->
+          <div class="col-md-6">
+            <div class=""> <!-- portfolio-info Disini-->
+              <div class="portfolio-details-slider swiper"> <!-- border border-primary -->
+                <div class="swiper-wrapper align-items-center">
+                  <!-- Tambahkan slide gambar di sini -->
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-movie-ticketing/slide-0.png" alt="" data-gallery="portfolioGallery" class="portfolio-lightbox" role="button"/>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-movie-ticketing/slide-1.png" alt="" data-gallery="portfolioGallery" class="portfolio-lightbox" role="button"/>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-movie-ticketing/slide-2.png" alt="" data-gallery="portfolioGallery" class="portfolio-lightbox" role="button"/>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="../assets/img/portfolio/java-movie-ticketing/slide-3.png" alt="" data-gallery="portfolioGallery" class="portfolio-lightbox" role="button"/>
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Bagian informasi proyek -->
+          <div class="col-md-6">
+            <div class="">
+              <h3>Project Information</h3>
+              <ul class="list-group">
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Project name</strong></div>
+                  <div class="col-9">: Movie Ticketing</div>
+                </li>
+                <!-- Category -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Category</strong></div>
+                  <div class="col-9">: Java Application</div>
+                </li>
+                <!-- Role -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3"><strong>Role</strong></div>
+                  <div class="col-9">: Java Developer (Student)</div>
+                </li>
+                <!-- Project date -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project date</strong>
+                  </div>
+                  <div class="col-9">
+                    : 2020
+                  </div><!-- Project tools -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Tools</strong>
+                  </div>
+                  <div class="col-9">
+                    : NetBeans
+                  </div>
+                </li><!-- Project URL -->
+                <li class="list-group-item d-flex">
+                  <div class="col-3">
+                    <strong>Project URL</strong>
+                  </div>
+                  <div class="col-9">
+                    <a href="https://github.com/maulanakavaldo/Order-Tiket-Bioskop" target="_blank">: GitHub</a>
+                  </div>
+                </li>
+                <!-- Uncomment and use as needed for other section -->
+                <!-- <li class="list-group-item d-flex">
+                                    <div class="col-3"><strong>Demo</strong></div>
+                                    <div class="col-9">
+                                        <a href="#" target="_blank">: </a>
+                                    </div>
+                                </li> -->
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-12 col-lg-6">
+          <div class="mt-5">
+            <h3>Details</h3>
+            <p>
+              Java-based software development project that aims to provide a platform that allows users to order cinema
+              tickets online. This application is designed to increase comfort and convenience for users in selecting,
+              ordering and paying for cinema tickets.
+            </p>
+
+            <h3 class="mt-5">Features:</h3>
+            <ul class="list-group">
+              <li class="list-group-item"><strong>Login:</strong> Users can log in to the application by entering valid
+                credentials. Upon
+                successful login, users will be directed to the main dashboard.</li>
+              <li class="list-group-item"><strong>Register:</strong> Users can create a new account by providing the
+                required information. The
+                registration process is straightforward and easy to follow.</li>
+              <li class="list-group-item"><strong>Log Out:</strong> Users can easily log out of their account at any
+                time to end their
+                session.</li>
+              <li class="list-group-item"><strong>Film Selection: </strong> Users can see a list of films currently
+                playing at Jitet cinemas, including information about film titles, synopsis, genre, duration and
+                screening schedule</li>
+              <li class="list-group-item"><strong>Order Process:</strong> Users can enter the number of tickets they
+                want to order and proceed to the order process. They will be asked to fill in personal information such
+                as name, telephone number, and email address for confirmation.</li>
+              <li class="list-group-item"><strong>Booking History::</strong> Users can view their ticket booking history
+                within the app. They can view information about films, show times, reserved seats and payment status.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Portfolio Details Section -->
+  </main>
+  <!-- End #main -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/typed.js/typed.min.js"></script>
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+  <!-- Template Main JS File -->
+  <script src="../assets/js/main.js"></script>
+</body>
+
+</html>
+
+
+
+
 
 <!DOCTYPE html>
 <html lang="en">
